# Pyrite

./: BUILD.bazel  Makefile  README.md  WORKSPACE
cart-abandonment-service/: BUILD.bazel  pom.xml
cart-abandonment-service/k8s/: cartabandonment.api.yaml  deployment.yaml
cart-abandonment-service/src/main/docker/: Dockerfile
cart-abandonment-service/src/main/java/com/pyrite/cartabandonmentservice/: AbandonmentScheduler.java  CartAbandonmentController.java  CartAbandonmentEventHandler.java  CartAbandonmentServiceApplication.java  CommerceProtos.java  EventStorage.java  EventUtil.java
cart-abandonment-service/src/test/java/com/pyrite/cartabandonmentservice/: CartAbandonmentServiceApplicationTests.java
cart-visual/: README.md  angular.json  package-lock.json  package.json  proxy.conf.js
cart-visual/deploy/: Dockerfile  deployment.yaml  microfrontend.yaml  nginx.conf
cart-visual/e2e/src/: app.e2e-spec.ts
cart-visual/src/: index.html
cart-visual/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.module.ts
cart-visual/src/app/dashboard/: dashboard.component.html  dashboard.component.ts
cart-visual/src/environments/: environment.prod.ts  environment.ts
eventgen/: .gitignore  BUILD  main.go  serve.go
eventgen/proto/commerce/: BUILD.bazel  commerce.proto
lambdas/: event-ingress.yaml  internal-lambda.yaml
lambdas/custom-event/: cart-abandoned-activation.yaml  process-abandoned-cart-lambda.yaml  process-cart-abandoned-subscription.yaml
stage/: cartabandonment.service.yaml  serviceaccount.yaml
(+3 files in other folders)
